@@ -25,53 +25,47 @@ class JavaScript(BrowserView):
 
         return """\
         $(document).ready(function(){
-        var plonePrettyPhoto = {};
-        (function($) {
-            plonePrettyPhoto.enable = function () {
-                // add rel tag for all links with class 'prettyPhoto'
-                $("a.prettyPhoto, a.state-popuppublished.contenttype-image").attr({"rel": "prettyPhoto"});
+            $(document).ready(function(){
 
-                // this is so links open in parent window, not in the popup
-                $("#pp_full_res a").attr("target", "_parent");   
-                
-                // add iframe attributes for all links with class 'prettyPhotoIframe'
-                $("a.prettyPhotoIframe").attr("href", function() {
-                    return this.href + "?iframe=true&width=%(iframe_width)s&height=%(iframe_height)s";
-                }).attr({"rel": "prettyPhoto"});
-                
-                // add ajax attributes for links for popupworkflow'
-                $(".state-popuppublished").attr("href", function() { 
-                    return this.href + "?ajax_load=1&ajax_include_head=1&ajax=true&width=%(iframe_width)s&height=%(iframe_height)s";
-                }).attr({"rel": "prettyPhoto"});
-                
-                // add iframe attributes for links with name galleri'
-                $(".section-galleri .state-popuppublished").attr("href", function() { 
-                    return this.href + "?ajax_load=1&ajax_include_head=1&iframe=true&width=%(iframe_width)s&height=%(iframe_height)s";
-                }).attr({"rel": "prettyPhoto"});
-
-                // enable prettyPhoto
-                $("a[rel^='prettyPhoto']").prettyPhoto({
-                    animation_speed: '%(speed)s', /* fast/slow/normal */
-                    opacity: %(opacity)s, /* Value between 0 and 1 */
-                    show_title: %(show_title)s, /* true/false */
-                    counter_separator_label: '%(counter_sep)s', /* The separator for the gallery counter 1 "of" 2 */
-                    theme: '%(theme)s',
-                    autoplay: %(autoplay)s, /* Automatically start videos: true/false */
-                    autoplay_slideshow: %(autoplay_slideshow)s,
-                    slideshow: %(slideshow)s, /* false OR interval time in ms */
-                    overlay_gallery: %(overlay_gallery)s, /* If set to true, a gallery will overlay the fullscreen image on mouse over */
-                    social_tools: false, /* I dont want this */
-                    deeplinking: %(deeplinking)s, /* allow prettyphoto to rewrite url for direktlinking to an image */
-                    markup: %(markup)s
+                    // add rel tag for all links with class 'prettyPhoto'
+                    $("a.prettyPhoto, a.state-popuppublished.contenttype-image").attr({"rel": "prettyPhoto"});
+    
+                    // this is so links open in parent window, not in the popup
+                    $("#pp_full_res a").attr("target", "_parent");   
+                    
+                    // add iframe attributes for all links with class 'prettyPhotoIframe'
+                    $("a.prettyPhotoIframe").attr("href", function() {
+                        return this.href + "?iframe=true&width=%(iframe_width)s&height=%(iframe_height)s";
+                    }).attr({"rel": "prettyPhoto"});
+                    
+                    // add ajax attributes for links for popupworkflow'
+                    $(".state-popuppublished").attr("href", function() { 
+                        return this.href + "?ajax_load=1&ajax_include_head=1&ajax=true&width=%(iframe_width)s&height=%(iframe_height)s";
+                    }).attr({"rel": "prettyPhoto"});
+                    
+                    // add iframe attributes for links with name galleri'
+                    $(".section-galleri .state-popuppublished").attr("href", function() { 
+                        return this.href + "?ajax_load=1&ajax_include_head=1&iframe=true&width=%(iframe_width)s&height=%(iframe_height)s";
+                    }).attr({"rel": "prettyPhoto"});
+    
+                    // enable prettyPhoto
+                    $("a[rel^='prettyPhoto']").prettyPhoto({
+                        animation_speed: '%(speed)s', /* fast/slow/normal */
+                        opacity: %(opacity)s, /* Value between 0 and 1 */
+                        show_title: %(show_title)s, /* true/false */
+                        counter_separator_label: '%(counter_sep)s', /* The separator for the gallery counter 1 "of" 2 */
+                        theme: '%(theme)s',
+                        autoplay: %(autoplay)s, /* Automatically start videos: true/false */
+                        autoplay_slideshow: %(autoplay_slideshow)s,
+                        slideshow: %(slideshow)s, /* false OR interval time in ms */
+                        overlay_gallery: %(overlay_gallery)s, /* If set to true, a gallery will overlay the fullscreen image on mouse over */
+                        social_tools: false, /* I dont want this */
+                        deeplinking: %(deeplinking)s, /* allow prettyphoto to rewrite url for direktlinking to an image */
+                        markup: %(markup)s
                 });
-            };
 
-            $(function() {
-                // enable prettyPhoto on document load
-                plonePrettyPhoto.enable();
-            });
         });
-        })(jQuery);
+    })(jQuery);
         """ % dict(speed=getattr(self.prettyphoto_properties, 'speed', 'normal'),
                    opacity=getattr(self.prettyphoto_properties, 'opacity', '0.80'),
                    show_title=getattr(self.prettyphoto_properties, 'show_title', True) and 'true' or 'false',
